# hello_unicorn

./: Justfile  build.sh  docker-compose.yml  manage.py  pyproject.toml  render.yaml  requirements.txt
hello/: urls.py  views.py
hello/templates/hello/: index.html
hello_unicorn/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
static_src/: package-lock.json  package.json  tailwind.config.js
templates/: 404.html  base.html
